# url-shortener

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start-app.sh
src/url_shortener/: manage.py
src/url_shortener/shortener/: constants.py  models.py  serializers.py  urls.py  utils.py  views.py
src/url_shortener/shortener/migrations/: 0001_initial.py
src/url_shortener/url_shortener/: asgi.py  settings.py  urls.py  wsgi.py
